--- a/Cleanser.html
+++ b/Cleanser.html
@@ -122,10 +122,10 @@
         </div>
     </header>
 
-    <div class="justify-content-center" style="height: 300px; margin: auto; padding-top: 100px; text-align: center;">
+    <div class="justify-content-center" style="height: auto; margin: auto; padding-top: 7%; padding-bottom: 4%; text-align: center;">
         <div style="width: auto; text-align: left; padding-left: 10%;">
             <h81 style="font-family: Glorify; font-weight: 100;">Cleansers and Removers</h81>
-            <p style=" font-stretch: ultra-expanded; font-weight: lighter; font-size: 25px ; color: white;">Wash away
+            <p style=" font-stretch: ultra-expanded; font-weight: lighter; font-size: 150% ; color: white;">Wash away
                 dirt, oil & pollution. The first step in your daily skincare routine.</p>
         </div>
     </div>
